--- a/module04/lab04.html
+++ b/module04/lab04.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Your Name">
-    <title>What an Ugly Page</title>
+    <title>What an Ugly Page</title> 
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
     
